--- a/obj2/obj2_index.html
+++ b/obj2/obj2_index.html
@@ -166,7 +166,7 @@
 
       x0.domain(dataGroupBarChart.map(function(d) { return d.label; }));
       x1.domain(keys).rangeRound([0, x0.bandwidth()]);
-      y.domain([0, d3.max(dataGroupBarChart, function(d) { return d3.max(keys, function(key) { return d[key]; }) + 1; })]).nice();
+      y.domain([0, d3.max(dataGroupBarChart, function(d) { return d3.max(keys, function(key) { return d[key]; }) }) + 100]).nice();
 
       var bar = g.append("g")
       .selectAll("g")
@@ -214,7 +214,7 @@
 
       g.append("g")
       .attr("class", "axisVertical")
-      .call(d3.axisLeft(y))
+      .call(d3.axisLeft(y).ticks(null, "s"))
       .append("text")
       .attr("x", 2)
       .attr("y", y(y.ticks().pop()) + 0.5)
